# PingerNator

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
Source/: PingerKnob.cpp  PingerKnob.h  PingerKnobComponent.cpp  PingerKnobComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
